--- a/dashboard.html
+++ b/dashboard.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <title>BirPlan – Tema Önizleme</title>
+  <meta charset="UTF-8" />
+  <title>BirPlan – Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <script src="https://cdn.tailwindcss.com"></script>
 
   <script>
@@ -10,15 +12,17 @@
       theme: {
         extend: {
           colors: {
-            bg: '#F5F7FA',
+            bg: '#F4F6FB',
+            sidebar: '#FFFFFF',
             primary: '#3B82F6',
-            primaryDark: '#2563EB',
-            textMain: '#111827',
-            textSub: '#374151',
-            textMuted: '#6B7280',
+            primarySoft: '#EFF6FF',
+            textMain: '#0F172A',
+            textSub: '#475569',
+            textMuted: '#94A3B8',
           },
           boxShadow: {
-            soft: '0 10px 25px rgba(0,0,0,0.08)'
+            soft: '0 10px 30px rgba(0,0,0,0.08)',
+            hover: '0 15px 35px rgba(59,130,246,0.25)'
           }
         }
       }
@@ -28,63 +32,146 @@
 
 <body class="bg-bg min-h-screen flex">
 
-<!-- SOL MENÜ -->
-<aside class="w-64 bg-white shadow-soft p-6 flex flex-col">
-  <div class="flex items-center gap-3 mb-10">
-    <div class="w-12 h-12 rounded-full bg-primary flex items-center justify-center text-white font-bold text-xl">
+<!-- SIDEBAR -->
+<aside id="sidebar"
+  class="w-64 bg-sidebar shadow-soft flex flex-col transition-all duration-300">
+
+  <!-- LOGO -->
+  <div class="flex items-center gap-3 p-6 border-b">
+    <div class="w-11 h-11 rounded-full bg-primary text-white flex items-center justify-center font-bold text-xl">
       B
     </div>
     <span class="text-xl font-bold text-textMain">BirPlan</span>
   </div>
 
-  <nav class="space-y-4 text-textSub font-medium">
-    <div class="text-primary font-semibold">Dashboard</div>
-    <div>Hesaplar</div>
-    <div>Bütçe</div>
-    <div>Gelir & Gider</div>
-    <div>Borç & Taksit</div>
-    <div>Varlıklar</div>
-    <div>Önemli Notlar</div>
-    <div>Vasiyet</div>
-    <div class="mt-6 text-sm text-textMuted">Ayarlar</div>
+  <!-- MENU -->
+  <nav class="flex-1 p-4 space-y-2">
+    <button class="menu-btn active">Dashboard</button>
+    <button class="menu-btn">Hesaplar</button>
+    <button class="menu-btn">Bütçe</button>
+    <button class="menu-btn">Gelir & Gider</button>
+    <button class="menu-btn">Borç & Taksitler</button>
+    <button class="menu-btn">Varlıklar</button>
+    <button class="menu-btn">Önemli Notlar</button>
+    <button class="menu-btn">Vasiyet</button>
+    <button class="menu-btn mt-6">Ayarlar</button>
   </nav>
+
+  <!-- LOGOUT -->
+  <div class="p-4 border-t">
+    <button class="w-full text-left text-red-600 font-semibold hover:bg-red-50 px-4 py-2 rounded-xl">
+      Çıkış Yap
+    </button>
+  </div>
 </aside>
 
-<!-- ANA ALAN -->
-<main class="flex-1 p-10">
-  <h1 class="text-3xl font-bold text-textMain mb-8">Dashboard</h1>
+<!-- MAIN -->
+<main class="flex-1 flex flex-col">
 
-  <!-- KARTLAR -->
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-10">
-    <div class="bg-white rounded-2xl p-6 shadow-soft">
-      <p class="text-textMuted">Toplam Bakiye</p>
-      <p class="text-3xl font-bold text-textMain mt-2">₺ 125.000</p>
+  <!-- TOP BAR -->
+  <header class="bg-white shadow-soft p-4 flex items-center justify-between">
+    <button onclick="toggleSidebar()"
+      class="bg-primarySoft text-primary px-4 py-2 rounded-xl font-semibold hover:shadow-hover transition">
+      ☰ Menü
+    </button>
+
+    <div class="flex items-center gap-3">
+      <div class="w-9 h-9 rounded-full bg-primary text-white flex items-center justify-center font-bold">
+        E
+      </div>
+      <span class="font-semibold text-textMain">Emre Sayın</span>
+    </div>
+  </header>
+
+  <!-- CONTENT -->
+  <section class="p-8">
+    <h1 class="text-3xl font-bold text-textMain mb-8">Dashboard</h1>
+
+    <!-- STATS -->
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-10">
+      <div class="card">
+        <p class="card-title">Toplam Bakiye</p>
+        <p class="card-value">₺125.000</p>
+      </div>
+      <div class="card">
+        <p class="card-title">Bu Ay Gelir</p>
+        <p class="card-value text-green-600">₺45.000</p>
+      </div>
+      <div class="card">
+        <p class="card-title">Bu Ay Gider</p>
+        <p class="card-value text-red-600">₺18.500</p>
+      </div>
     </div>
 
-    <div class="bg-white rounded-2xl p-6 shadow-soft">
-      <p class="text-textMuted">Bu Ay Gelir</p>
-      <p class="text-3xl font-bold text-green-600 mt-2">₺ 45.000</p>
+    <!-- ALT KARTLAR -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      <div class="card">
+        <p class="card-title">Hesaplar</p>
+        <p class="text-textMuted text-sm">Henüz hesap eklenmedi</p>
+      </div>
+      <div class="card">
+        <p class="card-title">Uyarılar</p>
+        <p class="text-textMuted text-sm">Yaklaşan uyarı yok</p>
+      </div>
     </div>
-
-    <div class="bg-white rounded-2xl p-6 shadow-soft">
-      <p class="text-textMuted">Bu Ay Gider</p>
-      <p class="text-3xl font-bold text-red-600 mt-2">₺ 18.500</p>
-    </div>
-  </div>
-
-  <!-- ALT KARTLAR -->
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-    <div class="bg-white rounded-2xl p-6 shadow-soft">
-      <h2 class="font-semibold text-textMain mb-3">Hesaplar</h2>
-      <p class="text-textMuted text-sm">Henüz hesap eklenmedi</p>
-    </div>
-
-    <div class="bg-white rounded-2xl p-6 shadow-soft">
-      <h2 class="font-semibold text-textMain mb-3">Uyarılar</h2>
-      <p class="text-textMuted text-sm">Yaklaşan uyarı yok</p>
-    </div>
-  </div>
+  </section>
 </main>
+
+<!-- COMPONENT STYLES -->
+<style>
+  .menu-btn {
+    width: 100%;
+    text-align: left;
+    padding: 12px 16px;
+    border-radius: 14px;
+    font-weight: 500;
+    color: #475569;
+    transition: all 0.25s;
+  }
+
+  .menu-btn:hover {
+    background: #EFF6FF;
+    color: #2563EB;
+    box-shadow: 0 10px 25px rgba(59,130,246,0.25);
+  }
+
+  .menu-btn.active {
+    background: #3B82F6;
+    color: white;
+    box-shadow: 0 15px 30px rgba(59,130,246,0.45);
+  }
+
+  .card {
+    background: white;
+    padding: 24px;
+    border-radius: 24px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+    transition: transform .2s;
+  }
+
+  .card:hover {
+    transform: translateY(-4px);
+  }
+
+  .card-title {
+    color: #64748B;
+    font-size: 14px;
+  }
+
+  .card-value {
+    font-size: 30px;
+    font-weight: 700;
+    margin-top: 6px;
+    color: #0F172A;
+  }
+</style>
+
+<script>
+  function toggleSidebar() {
+    const sidebar = document.getElementById('sidebar');
+    sidebar.classList.toggle('hidden');
+  }
+</script>
 
 </body>
 </html>
