Refactor dashboard.html structure and styles

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,21 +1,88 @@
-<nav class="flex-1 p-4 space-y-2">
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+  <meta charset="UTF-8" />
+  <title>BirPlan – Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
 
-  <a href="dashboard.html" class="menu-btn active">Dashboard</a>
+  <style>
+    .menu-btn {
+      display: block;
+      padding: 10px 14px;
+      border-radius: 12px;
+      font-weight: 500;
+      color: #374151;
+      transition: all .2s ease;
+    }
+    .menu-btn:hover {
+      background-color: #E0E7FF;
+      color: #2563EB;
+      box-shadow: 0 4px 12px rgba(0,0,0,.08);
+    }
+    .menu-active {
+      background-color: #3B82F6;
+      color: #fff;
+      box-shadow: 0 6px 18px rgba(59,130,246,.35);
+    }
+  </style>
+</head>
 
-  <a href="accounts.html" class="menu-btn">Hesaplar</a>
+<body class="bg-[#F5F7FA] min-h-screen flex">
 
-  <a href="budget.html" class="menu-btn">Bütçe</a>
+  <!-- SIDEBAR -->
+  <aside class="w-64 bg-white shadow-xl flex flex-col">
 
-  <a href="income-expense.html" class="menu-btn">Gelir & Gider</a>
+    <!-- LOGO / PROFIL -->
+    <div class="p-6 flex flex-col items-center border-b">
+      <img src="birplan-logo.png" class="h-10 mb-2" />
+      <span class="font-semibold text-gray-800">ES Kullanıcı</span>
+    </div>
 
-  <a href="debts.html" class="menu-btn">Borç & Taksitler</a>
+    <!-- MENU -->
+    <nav class="flex-1 p-4 space-y-1">
+      <a href="dashboard.html" class="menu-btn menu-active">Dashboard</a>
+      <a href="accounts.html" class="menu-btn">Hesaplar</a>
+      <a href="budget.html" class="menu-btn">Bütçe</a>
+      <a href="income-expense.html" class="menu-btn">Gelir & Gider</a>
+      <a href="debts.html" class="menu-btn">Borç & Taksitler</a>
+      <a href="assets.html" class="menu-btn">Varlıklar</a>
+      <a href="notes.html" class="menu-btn">Önemli Notlar</a>
+      <a href="will.html" class="menu-btn">Vasiyet</a>
+      <a href="settings.html" class="menu-btn mt-4">Ayarlar</a>
+    </nav>
 
-  <a href="assets.html" class="menu-btn">Varlıklar</a>
+    <!-- LOGOUT -->
+    <div class="p-4 border-t">
+      <a href="index.html" class="menu-btn text-red-600 hover:bg-red-50">
+        Çıkış Yap
+      </a>
+    </div>
+  </aside>
 
-  <a href="notes.html" class="menu-btn">Önemli Notlar</a>
+  <!-- MAIN CONTENT -->
+  <main class="flex-1 p-8">
+    <h1 class="text-2xl font-bold text-gray-800 mb-6">
+      Hoş geldin 👋
+    </h1>
 
-  <a href="will.html" class="menu-btn">Vasiyet</a>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+      <div class="bg-white rounded-2xl p-6 shadow-lg">
+        <p class="text-gray-500">Toplam Bakiye</p>
+        <p class="text-2xl font-bold">₺0</p>
+      </div>
 
-  <a href="settings.html" class="menu-btn mt-6">Ayarlar</a>
+      <div class="bg-white rounded-2xl p-6 shadow-lg">
+        <p class="text-gray-500">Bu Ay Gelir</p>
+        <p class="text-2xl font-bold text-green-600">₺0</p>
+      </div>
 
-</nav>
+      <div class="bg-white rounded-2xl p-6 shadow-lg">
+        <p class="text-gray-500">Bu Ay Gider</p>
+        <p class="text-2xl font-bold text-red-600">₺0</p>
+      </div>
+    </div>
+  </main>
+
+</body>
+</html>
